# vog

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  demo_window.cpp
include/: vog.h
src/: fonts.h  platform.h  platform_linux.cpp  platform_macos.mm  platform_windows.cpp  theme.hpp  window.cpp
